--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fusionjack.slimota"
+    package="com.fusionjack.krexusota"
     android:versionCode="4"
     android:versionName="5.5.10">
 
@@ -12,11 +12,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_slimota"
+        android:icon="@mipmap/ic_launcher_krexusota"
         android:label="@string/app_name"
         android:theme="@style/Theme.Main" >
         <activity
-            android:name="com.fusionjack.slimota.MainActivity"
+            android:name="com.fusionjack.krexusota.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
