--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fusionjack.krexusota"
-    android:versionCode="4"
-    android:versionName="5.5.10">
+    android:versionCode="5"
+    android:versionName="krexus_1.0">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,12 +14,22 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_krexusota"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Main" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.fusionjack.krexusota.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_title"
+            android:launchMode="singleInstance" >
+            <intent-filter android:priority="2147483647">
+                <!--
+                Show up under Settings, About Device, System Updates.
+                Assuming that is not disabled. There's a config option for that.
+                APK needs to be in priv-app for this to work!
+                -->
+                <action android:name="android.settings.SYSTEM_UPDATE_SETTINGS" />
+                <!--
                 <action android:name="android.intent.action.MAIN" />
+				-->
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <service android:name=".scheduler.OTAService" />
